--- a/src/scss/layouts/setting/_wish-list.scss
+++ b/src/scss/layouts/setting/_wish-list.scss
@@ -68,7 +68,7 @@
     ul{
       li{
         @include font-size(15px);
-        border-left: 1px solid $lighter-grey;
+        border-#{$left}: 1px solid $lighter-grey;
         line-height: 1;
         padding-#{$left}: 0.5rem;
         &:first-child{
