--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -61,6 +61,7 @@
       &:focus{
         box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
       }
+      border: 1px solid black;
     }
     button{
       position: absolute;
