fix the url for the web socket

--- a/src/scss/layouts/setting/_setting.scss
+++ b/src/scss/layouts/setting/_setting.scss
@@ -530,6 +530,11 @@
     }
   }
 
+  .request-comments {
+    @extend .request-details;
+    margin-top: 10px;
+  }
+
 }
 .replayed-parts-list{
   @extend .list-unstyled;
