making the Accessories page

--- a/src/scss/main-ar/main-ar.scss
+++ b/src/scss/main-ar/main-ar.scss
@@ -115,3 +115,4 @@ $dir: rtl;
 @import "../state/checkout/checkout-confirmation-order";
 @import "../state/tires.scss";
 @import "../state/add_product";
+@import "../layouts/category/accessories";
