--- a/src/scss/main/main.scss
+++ b/src/scss/main/main.scss
@@ -118,3 +118,4 @@ $dir: ltr;
 @import "../checkout-layout/header.scss";
 @import "../checkout-layout/footer.scss";
 @import "../checkout-layout/check-out.scss";
+@import "../layouts/category/accessories";
