check if we dont have any addresses

--- a/src/scss/state/checkout/_checkout-shipping.scss
+++ b/src/scss/state/checkout/_checkout-shipping.scss
@@ -50,6 +50,9 @@
             @include margin-left(5px);
           }
         }
+        .hide{
+          display: none;
+        }
         p{
           font-family: Roboto;
           @include font-size(17px);
