--- a/src/scss/layouts/setting/_setting.scss
+++ b/src/scss/layouts/setting/_setting.scss
@@ -460,7 +460,7 @@
           };
         }
         &.ship-info{
-        //   float: #{$right};
+          float: #{$right};
           border-#{$left}-width: 0;
           @include font-size(15px);
           padding-top: 5px;
